--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="Q4kAWv8xwtpl4EHU5RTNh97JEL8mJ3z5hYhcX0Roc5I" />
     <title>Laeeqthedev Portfolio</title>
   </head>
   <body>
